--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
-    "declaration": false,
+    "declaration": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "lib": [
@@ -10,6 +10,7 @@
     ],
     "module": "es2015",
     "moduleResolution": "node",
+    "outDir": "./dist",
     "sourceMap": true,
     "target": "es5",
     "typeRoots": [
