--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "ionic-swipe-all",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Allow Ionic (≥ v2) to recognize both horizontal and vertical swipe gesture.",
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
   "scripts": {
-    "build": "npm run clean && tsc && ngc && npm run copy",
+    "build": "npm run clean && tsc && ngc",
     "clean": "rimraf ./dist",
-    "copy": "copyfiles ./src/* ./dist/",
     "prepublish": "npm run build"
   },
   "repository": {
@@ -38,7 +37,6 @@
     "@angular/cli": "1.0.0",
     "@types/hammerjs": "2.0.34",
     "codelyzer": "^2.0.0-beta.1",
-    "copyfiles": "1.2.0",
     "rimraf": "^2.5.4",
     "tslint": "^3.15.1",
     "typescript": "2.2.2"
