--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "declaration": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "sourceMap": true,
     "lib": [
       "dom",
       "es2015"
@@ -11,11 +12,7 @@
     "module": "es2015",
     "moduleResolution": "node",
     "outDir": "./dist",
-    "sourceMap": true,
-    "target": "es5",
-    "typeRoots": [
-      "./node_modules/@types"
-    ]
+    "target": "es2015"
   },
   "include": [
     "src/**/*.ts"
@@ -24,8 +21,8 @@
     "node_modules",
     "src/**/*.spec.ts"
   ],
-  "compileOnSave": false,
-  "atom": {
-    "rewriteTsconfig": false
+  "angularCompilerOptions": {
+    "strictMetadataEmit": true,
+    "skipTemplateCodegen": true
   }
 }
