--- a/package.json
+++ b/package.json
@@ -26,18 +26,18 @@
     "url": "https://github.com/diogoqueiros/ionic-swipe-all/issues"
   },
   "dependencies": {
-    "@angular/common": "5.0.0",
-    "@angular/compiler": "5.0.0",
-    "@angular/compiler-cli": "5.0.0",
-    "@angular/core": "5.0.0",
-    "@angular/platform-browser": "5.0.0",
-    "@angular/platform-browser-dynamic": "5.0.0",
+    "@angular/common": "5.1.0-beta.2",
+    "@angular/compiler": "5.1.0-beta.2",
+    "@angular/compiler-cli": "5.1.0-beta.2",
+    "@angular/core": "5.1.0-beta.2",
+    "@angular/platform-browser": "5.1.0-beta.2",
+    "@angular/platform-browser-dynamic": "5.1.0-beta.2",
     "hammerjs": "2.0.8"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0",
+    "@angular/cli": "1.6.0",
     "@types/hammerjs": "2.0.34",
-    "rimraf": "^2.5.4",
+    "rimraf": "2.6.2",
     "typescript": "2.4.2"
   },
   "engines": {
