--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ionic-swipe-all",
-  "version": "1.3.0",
-  "description": "Allow Ionic 4 to recognize both horizontal and vertical swipe gesture.",
+  "version": "2.0.0",
+  "description": "Allow Ionic to recognize both horizontal and vertical swipe gesture.",
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
   "scripts": {
